--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ethereum adapter for the Mantichor project. (Currenly only implementing instance management features.)",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
+    "ganache-core": "^2.9.2",
     "solc": "^0.6.1",
     "web3": "^1.2.4"
   }
