--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.17.1",
     "fs-extra": "^8.1.0",
     "ganache-core": "^2.9.2",
+    "handlebars": "^4.7.2",
     "solc": "^0.6.1",
     "web3": "^1.2.4"
   }
