--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "Ethereum adapter for the Mantichor project. (Currenly only implementing instance management features.)",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js"
+    "start": "nodemon",
+    "lint": "tslint -p tsconfig.json",
+    "development": "npm run lint && node --inspect=9229 -r tsconfig-paths/register -r ts-node/register src/app.ts",
+    "build": "tsc",
+    "production": "node -r tsconfig-paths/register build/app.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +26,17 @@
     "ganache-core": "^2.9.2",
     "handlebars": "^4.7.2",
     "solc": "^0.6.1",
+    "tsconfig-paths": "^3.9.0",
+    "tslib": "^1.10.0",
     "web3": "^1.2.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "@types/fs-extra": "^8.0.1",
+    "@types/ganache-core": "^2.7.0",
+    "nodemon": "^2.0.2",
+    "ts-lint": "^4.5.1",
+    "ts-node": "^8.6.2",
+    "typescript": "^3.7.5"
   }
 }
