--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon",
-    "lint": "tslint -p tsconfig.json",
+    "lint": "tslint -p tsconfig.json src/app.ts",
     "development": "npm run lint && node --inspect=9229 -r tsconfig-paths/register -r ts-node/register src/app.ts",
     "build": "tsc",
     "production": "node -r tsconfig-paths/register build/app.js"
